release: prepare 1.0.4 source updates