@@ -57,9 +57,12 @@ if (isCurseForgeDist) {
     tasks.named('compileJava', JavaCompile) {
         source = files(
                 fileTree('src/main/java') {
-                    exclude 'com/micaftic/morpher/NativeLibLoader.java'
+                    exclude 'com/micaftic/morpher/RuntimeAccelerationLoader.java'
+                    exclude 'com/micaftic/morpher/client/gui/resource/ResourceStationConfig.java'
+                    exclude 'com/elfmcys/yesstevemodel/geckolib3/geo/render/built/ModelAccelerationBridge.java'
                     exclude 'com/ysm/parser/YSMParser.java'
                     exclude 'com/ysm/parser/YSMNative.java'
+                    exclude 'com/micaftic/morpher/core/algorithms/YsmAlgorithmBridge.java'
                 },
                 fileTree('src/curseforge/java')
         )
@@ -76,6 +79,7 @@ dependencies {
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
     options.release = 21
+    options.compilerArgs.addAll(["--add-modules", "jdk.incubator.vector"])
 }
 
 java {
@@ -97,6 +101,10 @@ processResources {
 
     filesMatching(['META-INF/neoforge.mods.toml']) {
         expand expandProps
+    }
+
+    from(rootProject.file('LICENSE')) {
+        rename { 'LICENSE' }
     }
 
     if (isCurseForgeDist) {
